<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"

    tools:context="adenia.adenia.createUser">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="130dp"
            android:id="@+id/imageView"
            android:background="@drawable/adenialogonew"
            android:contentDescription=""
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/username"
            android:hint="@string/Username"
            android:textColor="#000"
            android:background="@drawable/login_username"
            android:backgroundTint="#fff"
            android:layout_below="@+id/imageView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignEnd="@+id/textView2"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:id="@+id/passwordCreate"
            android:layout_marginTop="65dp"
            android:hint="@string/password"
            android:background="@drawable/login_password"
            android:backgroundTint="#fff"
            android:textColor="#000"
            android:layout_below="@+id/imageView2"
            android:layout_alignStart="@+id/username"
            android:layout_alignEnd="@+id/username" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:paddingTop="9dp"
            android:background="@drawable/adeniatext2"/>




    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:layout_below="@+id/spinner">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create"
        android:id="@+id/loginButton"
        android:onClick="create"
        android:layout_weight="1"
        android:background="@drawable/colorbutton"
        android:textColor="#ffff"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ViewUser"
            android:id="@+id/viewUser"
            android:onClick="viewUser"
            android:layout_weight="1"
            android:background="@drawable/colorbutton"
            android:textColor="#ffff"

            android:layout_alignParentStart="true" />

    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/spinner"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
